Backport requirements for openidm-maintenance